--- a/style.css
+++ b/style.css
@@ -11,6 +11,11 @@
 body {
   font-family: "Lato", sans-serif;
   margin: 0;
+  transition: transform 0.3s ease;
+}
+body.show-nav{
+  /* width of the nav */
+transform: translateX(200px);
 }
 
 nav {
@@ -25,15 +30,18 @@ nav {
   z-index: 100;
   transform: translateX(-100%);
 }
+
 nav .logo {
   padding: 30px 0;
   text-align: center;
 }
+
 nav .logo img {
   height: 75px;
   width: 75px;
   border-radius: 50%;
 }
+
 nav ul {
   padding: 0;
   list-style-type: none;
@@ -44,6 +52,7 @@ nav ul li {
   border-bottom: 2px solid rgba(200, 200, 200, 0.1);
   padding: 20px;
 }
+
 nav ul li:first-of-type {
   border-top: 2px solid rgba(200, 200, 200, 0.1);
 } 
@@ -52,9 +61,11 @@ nav ul li a{
     color: #fff;
     text-decoration: none;
 }
+
 nav ul li a:hover{
     text-decoration: underline;
 }
+
 header{
   background-color: var(--primary-color);
   color: #fff;
@@ -67,6 +78,7 @@ header{
 header h1{
   margin: 0;
 }
+
 header p{
   margin: 30px 0;
 }
@@ -104,7 +116,7 @@ button:focus{
 }
 .modal-container{
   background-color: rgba(0,0,0,0.6);
-  /* display: none; */
+  display: none;
   position: fixed;
   top: 0;
   left: 0;
@@ -112,6 +124,13 @@ button:focus{
   bottom: 0;
 
 }
+
+.modal-container.show-modal{
+  display: block;
+
+}
+
+
 .modal{
   background-color: #fff;
   border-radius: 5px;
@@ -123,8 +142,11 @@ button:focus{
   transform: translate(-50%,-50%);
   max-width: 100%;
   width: 400px;
+  animation-name: modalopen;
+  animation-duration: var(--modal-duration);
 
 }
+
 .modal-header{
   background: var(--primary-color);
   color: #fff;
@@ -144,10 +166,12 @@ button:focus{
 .modal-form div{
   margin: 15px 0;
 }
+
 .modal-form label{
   display: block;
   margin-bottom:5px;
 }
+
 .modal-form .form-input{
   padding: 8px;
   width: 100%;
@@ -159,4 +183,13 @@ button:focus{
   position: absolute;
   top: 0;
   right: 0;
+}
+
+@keyframes modalopen{
+  from{
+    opacity: 0;
+  }
+  to{
+    opacity: 1;
+  }
 }
